# AOS_project

./: CMakeLists.txt  Kconfig  README.md  adaptiveCPU_plugin.cc  adaptiveCPU_plugin.h  adaptiveCPU_schedpol.cc  adaptiveCPU_schedpol.h  adaptive_cpu_schedpol.cc  adaptive_cpu_schedpol.h
